// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render tests render card-patient-consultation with avaliation button 1`] = `
<a>
  <div
    className="sc-hBMVcZ bKqlkm"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
  >
    <div
      className="sc-fnVYJo hDKOeT"
    >
      <div
        className="sc-fFSRdu fftKdo"
      >
        <img
          className="sc-bkbjAj fyHKQJ"
          src="img"
        />
      </div>
      <div
        className="sc-iemXMA laIHhy"
      >
        <div
          className="sc-hHEjAm hhzDWw"
        >
          Joana Camargo Mota
        </div>
        <div
          className="sc-dIvqjp hRZcSb"
        >
          CRP: 01/74521
        </div>
        <ul
          className="ant-rate ant-rate-disabled sc-lmgQde cdfVZg"
          onBlur={null}
          onFocus={null}
          onKeyDown={null}
          onMouseLeave={null}
          role="radiogroup"
          style={Object {}}
          tabIndex={-1}
        >
          <li
            className="ant-rate-star ant-rate-star-full"
          >
            <div
              aria-checked="true"
              aria-posinset={1}
              aria-setsize={5}
              onClick={null}
              onKeyDown={null}
              onMouseMove={null}
              role="radio"
              tabIndex={-1}
            >
              <div
                className="ant-rate-star-first"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
              <div
                className="ant-rate-star-second"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </li>
          <li
            className="ant-rate-star ant-rate-star-full"
          >
            <div
              aria-checked="true"
              aria-posinset={2}
              aria-setsize={5}
              onClick={null}
              onKeyDown={null}
              onMouseMove={null}
              role="radio"
              tabIndex={-1}
            >
              <div
                className="ant-rate-star-first"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
              <div
                className="ant-rate-star-second"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </li>
          <li
            className="ant-rate-star ant-rate-star-full"
          >
            <div
              aria-checked="true"
              aria-posinset={3}
              aria-setsize={5}
              onClick={null}
              onKeyDown={null}
              onMouseMove={null}
              role="radio"
              tabIndex={-1}
            >
              <div
                className="ant-rate-star-first"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
              <div
                className="ant-rate-star-second"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </li>
          <li
            className="ant-rate-star ant-rate-star-full"
          >
            <div
              aria-checked="true"
              aria-posinset={4}
              aria-setsize={5}
              onClick={null}
              onKeyDown={null}
              onMouseMove={null}
              role="radio"
              tabIndex={-1}
            >
              <div
                className="ant-rate-star-first"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
              <div
                className="ant-rate-star-second"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </li>
          <li
            className="ant-rate-star ant-rate-star-zero"
          >
            <div
              aria-checked="true"
              aria-posinset={5}
              aria-setsize={5}
              onClick={null}
              onKeyDown={null}
              onMouseMove={null}
              role="radio"
              tabIndex={-1}
            >
              <div
                className="ant-rate-star-first"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
              <div
                className="ant-rate-star-second"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="sc-kfYqjs hGrzbw"
    >
      <div
        className="sc-fKgIGh bdrNNV"
      >
        <div
          className="sc-dlMBXb eStsov"
        >
          Data
        </div>
        <div
          className="sc-bCwgka fTlmbS"
        />
      </div>
      <div
        className="sc-fKgIGh bdrNNV"
      >
        <div
          className="sc-dlMBXb eStsov"
        >
          Horário
        </div>
        <div
          className="sc-bCwgka fTlmbS"
        />
      </div>
      <div
        className="sc-fKgIGh bdrNNV"
      >
        <div
          className="sc-dlMBXb eStsov"
        >
          Valor
        </div>
        <div
          className="sc-bCwgka fTlmbS"
        >
          R$ 90,00
        </div>
      </div>
    </div>
    <div
      className="sc-cxNIbT fxVCCd"
    >
      <div
        className="sc-dlMBXb eStsov"
      >
        Avaliação
      </div>
      <ul
        className="ant-rate ant-rate-disabled sc-lmgQde cdfVZg"
        onBlur={null}
        onFocus={null}
        onKeyDown={null}
        onMouseLeave={null}
        role="radiogroup"
        style={Object {}}
        tabIndex={-1}
      >
        <li
          className="ant-rate-star ant-rate-star-zero"
        >
          <div
            aria-checked="false"
            aria-posinset={1}
            aria-setsize={5}
            onClick={null}
            onKeyDown={null}
            onMouseMove={null}
            role="radio"
            tabIndex={-1}
          >
            <div
              className="ant-rate-star-first"
            >
              <span
                aria-label="star"
                className="anticon anticon-star"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                  />
                </svg>
              </span>
            </div>
            <div
              className="ant-rate-star-second"
            >
              <span
                aria-label="star"
                className="anticon anticon-star"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </li>
        <li
          className="ant-rate-star ant-rate-star-zero"
        >
          <div
            aria-checked="false"
            aria-posinset={2}
            aria-setsize={5}
            onClick={null}
            onKeyDown={null}
            onMouseMove={null}
            role="radio"
            tabIndex={-1}
          >
            <div
              className="ant-rate-star-first"
            >
              <span
                aria-label="star"
                className="anticon anticon-star"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                  />
                </svg>
              </span>
            </div>
            <div
              className="ant-rate-star-second"
            >
              <span
                aria-label="star"
                className="anticon anticon-star"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </li>
        <li
          className="ant-rate-star ant-rate-star-zero"
        >
          <div
            aria-checked="false"
            aria-posinset={3}
            aria-setsize={5}
            onClick={null}
            onKeyDown={null}
            onMouseMove={null}
            role="radio"
            tabIndex={-1}
          >
            <div
              className="ant-rate-star-first"
            >
              <span
                aria-label="star"
                className="anticon anticon-star"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                  />
                </svg>
              </span>
            </div>
            <div
              className="ant-rate-star-second"
            >
              <span
                aria-label="star"
                className="anticon anticon-star"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </li>
        <li
          className="ant-rate-star ant-rate-star-zero"
        >
          <div
            aria-checked="false"
            aria-posinset={4}
            aria-setsize={5}
            onClick={null}
            onKeyDown={null}
            onMouseMove={null}
            role="radio"
            tabIndex={-1}
          >
            <div
              className="ant-rate-star-first"
            >
              <span
                aria-label="star"
                className="anticon anticon-star"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                  />
                </svg>
              </span>
            </div>
            <div
              className="ant-rate-star-second"
            >
              <span
                aria-label="star"
                className="anticon anticon-star"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </li>
        <li
          className="ant-rate-star ant-rate-star-zero"
        >
          <div
            aria-checked="false"
            aria-posinset={5}
            aria-setsize={5}
            onClick={null}
            onKeyDown={null}
            onMouseMove={null}
            role="radio"
            tabIndex={-1}
          >
            <div
              className="ant-rate-star-first"
            >
              <span
                aria-label="star"
                className="anticon anticon-star"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                  />
                </svg>
              </span>
            </div>
            <div
              className="ant-rate-star-second"
            >
              <span
                aria-label="star"
                className="anticon anticon-star"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  className=""
                  data-icon="star"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</a>
`;

exports[`Render tests render card-patient-consultation with reschedule button 1`] = `
<a>
  <div
    className="sc-hBMVcZ bKqlkm"
    style={
      Object {
        "border": "2px solid #70a3ef",
      }
    }
  >
    <div
      className="sc-fnVYJo hDKOeT"
    >
      <div
        className="sc-fFSRdu fftKdo"
      >
        <img
          className="sc-bkbjAj fyHKQJ"
          src="img"
        />
      </div>
      <div
        className="sc-iemXMA laIHhy"
      >
        <div
          className="sc-hHEjAm hhzDWw"
        >
          Mario Silva
        </div>
        <div
          className="sc-dIvqjp hRZcSb"
        >
          CRP: 02/6667
        </div>
        <ul
          className="ant-rate ant-rate-disabled sc-lmgQde cdfVZg"
          onBlur={null}
          onFocus={null}
          onKeyDown={null}
          onMouseLeave={null}
          role="radiogroup"
          style={Object {}}
          tabIndex={-1}
        >
          <li
            className="ant-rate-star ant-rate-star-full"
          >
            <div
              aria-checked="true"
              aria-posinset={1}
              aria-setsize={5}
              onClick={null}
              onKeyDown={null}
              onMouseMove={null}
              role="radio"
              tabIndex={-1}
            >
              <div
                className="ant-rate-star-first"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
              <div
                className="ant-rate-star-second"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </li>
          <li
            className="ant-rate-star ant-rate-star-full"
          >
            <div
              aria-checked="true"
              aria-posinset={2}
              aria-setsize={5}
              onClick={null}
              onKeyDown={null}
              onMouseMove={null}
              role="radio"
              tabIndex={-1}
            >
              <div
                className="ant-rate-star-first"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
              <div
                className="ant-rate-star-second"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </li>
          <li
            className="ant-rate-star ant-rate-star-full"
          >
            <div
              aria-checked="true"
              aria-posinset={3}
              aria-setsize={5}
              onClick={null}
              onKeyDown={null}
              onMouseMove={null}
              role="radio"
              tabIndex={-1}
            >
              <div
                className="ant-rate-star-first"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
              <div
                className="ant-rate-star-second"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </li>
          <li
            className="ant-rate-star ant-rate-star-full"
          >
            <div
              aria-checked="true"
              aria-posinset={4}
              aria-setsize={5}
              onClick={null}
              onKeyDown={null}
              onMouseMove={null}
              role="radio"
              tabIndex={-1}
            >
              <div
                className="ant-rate-star-first"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
              <div
                className="ant-rate-star-second"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </li>
          <li
            className="ant-rate-star ant-rate-star-full"
          >
            <div
              aria-checked="true"
              aria-posinset={5}
              aria-setsize={5}
              onClick={null}
              onKeyDown={null}
              onMouseMove={null}
              role="radio"
              tabIndex={-1}
            >
              <div
                className="ant-rate-star-first"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
              <div
                className="ant-rate-star-second"
              >
                <span
                  aria-label="star"
                  className="anticon anticon-star"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="star"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 00.6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0046.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="sc-kfYqjs hGrzbw"
    >
      <div
        className="sc-fKgIGh bdrNNV"
      >
        <div
          className="sc-dlMBXb eStsov"
        >
          Data
        </div>
        <div
          className="sc-bCwgka fTlmbS"
        />
      </div>
      <div
        className="sc-fKgIGh bdrNNV"
      >
        <div
          className="sc-dlMBXb eStsov"
        >
          Horário
        </div>
        <div
          className="sc-bCwgka fTlmbS"
        />
      </div>
      <div
        className="sc-fKgIGh bdrNNV"
      >
        <div
          className="sc-dlMBXb eStsov"
        >
          Valor
        </div>
        <div
          className="sc-bCwgka fTlmbS"
        >
          R$ 250,00
        </div>
      </div>
    </div>
    <div
      className="sc-iwaifL hfZDBU"
    >
      <div>
        <button
          className="sc-bdnylx cgNAEc"
          color="#9e9e9e"
          data-text="Remarcar"
          fontSize="16px"
          height="35px"
          onClick={[Function]}
          width="100px"
        >
          <span>
            R
          </span>
          <span>
            e
          </span>
          <span>
            m
          </span>
          <span>
            a
          </span>
          <span>
            r
          </span>
          <span>
            c
          </span>
          <span>
            a
          </span>
          <span>
            r
          </span>
        </button>
      </div>
      <div>
        <button
          className="sc-bdnylx jxkDVd"
          color="#e16769"
          data-text="Cancelar"
          fontSize="16px"
          height="35px"
          onClick={[Function]}
          width="100px"
        >
          <span>
            C
          </span>
          <span>
            a
          </span>
          <span>
            n
          </span>
          <span>
            c
          </span>
          <span>
            e
          </span>
          <span>
            l
          </span>
          <span>
            a
          </span>
          <span>
            r
          </span>
        </button>
      </div>
    </div>
  </div>
</a>
`;
